update oxbow paragraphs.

--- a/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.base.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.base.scss
@@ -123,6 +123,10 @@ $scroll-w: $paragraph-p * 1.5;
 
   [class*='field--type-text'] {
     text-align: left;
+
+    > *:last-child {
+      margin-bottom: 0;
+    }
   }
   
   figure {
