--- a/web/themes/starter/sass/base/_typography.scss
+++ b/web/themes/starter/sass/base/_typography.scss
@@ -49,11 +49,30 @@ $header-bottom-margin: .5rem;
 
 // We use these to control header font sizes
 $h1-font-size: rem-calc(44);
-$h2-font-size: rem-calc(37);
-$h3-font-size: rem-calc(27);
-$h4-font-size: rem-calc(23);
-$h5-font-size: rem-calc(18);
+$h2-font-size: rem-calc(32);
+$h3-font-size: rem-calc(24);
+$h4-font-size: rem-calc(18);
+$h5-font-size: rem-calc(16);
 $h6-font-size: 1rem;
+
+$header-sizes: (
+    small: (
+        'h1': 24,
+        'h2': 20,
+        'h3': 19,
+        'h4': 18,
+        'h5': 17,
+        'h6': 16,
+    ),
+    medium: (
+        'h1': $h1-font-size,
+        'h2': $h2-font-size,
+        'h3': $h3-font-size,
+        'h4': $h4-font-size,
+        'h5': $h5-font-size,
+        'h6': $h6-font-size,
+    ),
+);
 
 // We use these to control header size reduction on small screens
 // $h1-font-reduction: rem-calc(10);
