--- a/web/themes/starter/sass/screen.scss
+++ b/web/themes/starter/sass/screen.scss
@@ -52,6 +52,7 @@
 
 @import "components/node/node";
 @import "components/node/node--content-page";
+@import "components/node/node--sermon";
 
 @import "components/view/view";
 @import "components/view/view--articles";
