--- a/web/themes/starter/sass/components/node/_node--sermon.scss
+++ b/web/themes/starter/sass/components/node/_node--sermon.scss
@@ -23,36 +23,20 @@ body.page-node-type-sermon .node--type-sermon {
 }
 
 /// All Block
-.view-display-id-block_all {
+.node--type-sermon.node--view-mode-teaser {
+  @include flex($v-align: baseline, $h-align: space-between);
+  flex-direction: row;
+  flex-wrap: wrap;
 
-  .node {
-    @include flex($v-align: baseline, $h-align: space-between);
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    .node__title {
-      padding-right: padding(m);
-    }
-
-    .node__content {
-      width: 100%;
-
-      audio {
-        margin-top: padding(s);
-      }
-    }
-  }
-}
-
-/// Paragraph View
-.paragraph.layout-type-stack .view-id-sermons {
-
-  .view-content {
-    flex-direction: column;
-    flex-wrap: wrap;
+  .node__title {
+    padding-right: padding(m);
   }
 
-  .views-row {
-    flex: 1 0 100%;
+  .node__content {
+    width: 100%;
+
+    audio {
+      margin-top: padding(s);
+    }
   }
 }
