--- a/web/themes/starter/templates/node--sermon.html.twig
+++ b/web/themes/starter/templates/node--sermon.html.twig
@@ -13,7 +13,7 @@
   {{ title_prefix }}
   {% if not page %}
     <h2{{ title_attributes }} class="node__title">
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      {{ label }}
     </h2>
   {% endif %}
   {{ title_suffix }}
