--- a/web/modules/custom/oxbow_paragraphs/sass/oxbow_paragraphs.layouts.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/oxbow_paragraphs.layouts.scss
@@ -72,19 +72,22 @@ $col-w-min: 320px;
 }
 
 .layout-align-top.layout-columns,
-.layout-align-top .layout-columns {
+.layout-align-top .layout-columns,
+.layout-align-top .slick-track {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
 }
 .layout-align-center.layout-columns,
-.layout-align-center .layout-columns {
+.layout-align-center .layout-columns,
+.layout-align-center .slick-track {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
 }
 .layout-align-bottom.layout-columns,
-.layout-align-bottom .layout-columns {
+.layout-align-bottom .layout-columns,
+.layout-align-bottom .slick-track {
   -webkit-box-align: end;
   -ms-flex-align: end;
   align-items: flex-end;
