--- a/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.view.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.view.scss
@@ -10,6 +10,7 @@
         .view-content {
           position: relative;
           display: flex;
+          flex-wrap: wrap;
         }
         
         .views-row {
