theming for portal login form

--- a/web/themes/starter/sass/screen.scss
+++ b/web/themes/starter/sass/screen.scss
@@ -34,6 +34,7 @@
 @import "components/buttons/buttons";
 
 @import "components/forms/forms";
+@import "components/forms/form--login";
 
 @import "components/slideshow/slick";
 
