--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -6097,6 +6097,48 @@ form .form-item.webform-component-time .form-radios {
   margin: 1.5rem auto 0;
 }
 
+/* line 3, ../sass/components/forms/_form--login.scss */
+form[action*='bethelmennonite.ccbchurch.com/login'] label {
+  text-align: left;
+}
+/* line 7, ../sass/components/forms/_form--login.scss */
+form[action*='bethelmennonite.ccbchurch.com/login'] input[type='submit'] {
+  display: inline-block;
+  text-align: center;
+  line-height: 1;
+  cursor: pointer;
+  -webkit-appearance: none;
+  transition: background-color 0.25s ease-out, color 0.25s ease-out;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  border-radius: 0;
+  padding: 0.85em 1em;
+  margin: 0 0 1rem 0;
+  font-size: 0.9rem;
+  background-color: #007178;
+  color: white;
+  box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
+  color: white !important;
+  padding: 0.75rem;
+  margin-bottom: 0;
+  width: 100%;
+  margin: 0.75rem 0;
+}
+/* line 173, ../foundation/bower_components/foundation-sites/scss/util/_mixins.scss */
+[data-whatinput='mouse'] form[action*='bethelmennonite.ccbchurch.com/login'] input[type='submit'] {
+  outline: 0;
+}
+/* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
+form[action*='bethelmennonite.ccbchurch.com/login'] input[type='submit']:hover, form[action*='bethelmennonite.ccbchurch.com/login'] input[type='submit']:focus {
+  background-color: #005a60;
+  color: white;
+}
+/* line 13, ../sass/components/forms/_form--login.scss */
+form[action*='bethelmennonite.ccbchurch.com/login'] a {
+  display: block;
+  font-size: .7em;
+}
+
 /* line 4, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu {
   position: absolute;
