--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -6872,3 +6872,52 @@ body.page-node-type-sermon .node--type-sermon audio {
 .paragraph.view-background-true .views-row > .node {
   padding: 1.5rem;
 }
+
+/* line 18, ../sass/components/paragraphs/_paragraphs.scss */
+.paragraph.title-fill > .p__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+/* line 21, ../sass/components/paragraphs/_paragraphs.scss */
+.paragraph.title-fill > .p__inner > .p__title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+/* line 25, ../sass/components/paragraphs/_paragraphs.scss */
+.paragraph.title-fill > .p__inner > .p__title a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
